add bootstrap formatting

--- a/index.html
+++ b/index.html
@@ -3,22 +3,37 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <title>Visit Narnia!</title>
+    <title>Visit Landjaeger!</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Visit Narnia!</h1>
+        <h1>Visit Landjaeger!</h1>
       </div>
       <p>Spicy jalapeno bacon ipsum dolor amet picanha tenderloin leberkas, fatback pastrami flank tail meatloaf porchetta t-bone filet mignon brisket pig pork. Brisket sausage hamburger, beef kielbasa pork belly landjaeger leberkas ham hock chuck capicola jowl. Jerky strip steak andouille, kevin biltong pig landjaeger jowl pork belly ground round ball tip shank. Short ribs biltong rump corned beef. Short ribs filet mignon strip steak biltong. Meatball turducken brisket, beef rump leberkas flank shankle pork belly.</p>
 
-      <p>Capicola pig leberkas bacon ham beef shoulder swine turducken. Venison pork chop beef andouille pig short loin. Turducken t-bone pancetta pastrami shankle pork chop. Drumstick beef shankle picanha kevin, kielbasa ball tip. Chicken rump jowl pork belly picanha spare ribs sausage boudin leberkas kevin prosciutto.</p>
+      <div class="panel panel-danger">
+        <p>Capicola pig leberkas bacon ham beef shoulder swine turducken. Venison pork chop beef andouille pig short loin. Turducken t-bone pancetta pastrami shankle pork chop. Drumstick beef shankle picanha kevin, kielbasa ball tip. Chicken rump jowl pork belly picanha spare ribs sausage boudin leberkas kevin prosciutto.</p>
+      </div>
 
       <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
 
-      <p>Fatback ball tip beef ribs turkey. Corned beef ball tip pork chop fatback pork belly ham strip steak tri-tip kevin turducken short loin. Burgdoggen beef ribs cupim, brisket frankfurter rump boudin corned beef jerky biltong turkey tail porchetta tongue leberkas. Spare ribs meatloaf short ribs kevin, burgdoggen corned beef pastrami.</p>
+      <div class="panel panel-warning">
+        <p>Fatback ball tip beef ribs turkey. Corned beef ball tip pork chop fatback pork belly ham strip steak tri-tip kevin turducken short loin. Burgdoggen beef ribs cupim, brisket frankfurter rump boudin corned beef jerky biltong turkey tail porchetta tongue leberkas. Spare ribs meatloaf short ribs kevin, burgdoggen corned beef pastrami.</p>
+      </div>
 
-      <p>Bresaola fatback kevin alcatra. Beef ribs pork doner tongue, sirloin tri-tip tenderloin short loin rump leberkas swine brisket spare ribs alcatra pancetta. Turkey pork chop pastrami salami filet mignon. Spare ribs jowl pork loin beef, ham brisket salami cupim chuck tail swine. Kevin swine strip steak sausage, ribeye bacon jowl ground round cow flank. Corned beef brisket meatball drumstick, salami shoulder chicken jerky kevin. Turkey beef ribs tri-tip bresaola shoulder, t-bone salami beef alcatra pig strip steak sausage filet mignon kevin kielbasa.</p>
+      <div class="panel-body bg-success">
+        <p>Bresaola fatback kevin alcatra. Beef ribs pork doner tongue, sirloin tri-tip tenderloin short loin rump leberkas swine brisket spare ribs alcatra pancetta. Turkey pork chop pastrami salami filet mignon. Spare ribs jowl pork loin beef, ham brisket salami cupim chuck tail swine. Kevin swine strip steak sausage, ribeye bacon jowl ground round cow flank. Corned beef brisket meatball drumstick, salami shoulder chicken jerky kevin. Turkey beef ribs tri-tip bresaola shoulder, t-bone salami beef alcatra pig strip steak sausage filet mignon kevin kielbasa.</p>
+      </div>
+
+      <blockquote class="bg-info">
+        <p>"Turkey pork chop pastrami salami filet mignon."</p>
+        <footer>Kevin</footer>
+      </blockquote>
+      <blockquote class="bg-info">
+        <p>"But I'm a vegetarian!"</p>
+        <footer>Kevin</footer>
+      </blockquote>
     </div>
   </body>
 </html>
