more bootstrap formatting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <p>Capicola pig leberkas bacon ham beef shoulder swine turducken. Venison pork chop beef andouille pig short loin. Turducken t-bone pancetta pastrami shankle pork chop. Drumstick beef shankle picanha kevin, kielbasa ball tip. Chicken rump jowl pork belly picanha spare ribs sausage boudin leberkas kevin prosciutto.</p>
       </div>
 
-      <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
+      <div class="row">
+        <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
+        
+      </div>
 
       <div class="panel panel-warning">
         <p>Fatback ball tip beef ribs turkey. Corned beef ball tip pork chop fatback pork belly ham strip steak tri-tip kevin turducken short loin. Burgdoggen beef ribs cupim, brisket frankfurter rump boudin corned beef jerky biltong turkey tail porchetta tongue leberkas. Spare ribs meatloaf short ribs kevin, burgdoggen corned beef pastrami.</p>
