--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Visit Landjaeger!</title>
   </head>
   <body>
@@ -17,15 +18,15 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-4">
           <h3>prosciutto</h3>
           <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-4">
           <h3>andouille</h3>
           <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-4">
           <h3>capicola</h3>
           <p>Turkey shankle prosciutto andouille cupim chuck, salami sausage tail landjaeger pork loin alcatra shank. Tongue ball tip strip steak porchetta turducken turkey meatloaf picanha corned beef doner pork loin fatback. Andouille swine turkey turducken beef pastrami ham boudin porchetta capicola sausage. Ham biltong sausage shoulder. Shoulder drumstick landjaeger chicken. Pork belly pork chop brisket flank filet mignon ball tip shank. Alcatra picanha beef pork corned beef pancetta.</p>
         </div>
